--- a/RemoteDeploy.Server/Properties/launchSettings.json
+++ b/RemoteDeploy.Server/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "RemoteDeploy.Server": {
+    "XDeploy.Server": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
