--- a/RemoteDeploy.Server/RemoteDeploy.Server.csproj
+++ b/RemoteDeploy.Server/RemoteDeploy.Server.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <UserSecretsId>aspnet-RemoteDeploy.Server-9FAB833C-9F65-4A46-8C4F-7983328E52B2</UserSecretsId>
+    <UserSecretsId>aspnet-XDeploy.Server-9FAB833C-9F65-4A46-8C4F-7983328E52B2</UserSecretsId>
   </PropertyGroup>
 
 
