--- a/RemoteDeploy.Server/appsettings.json
+++ b/RemoteDeploy.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-RemoteDeploy.Server-9FAB833C-9F65-4A46-8C4F-7983328E52B2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=XDeploy;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
