--- a/XDeploy.Deployer/XDeploy.Deployer.csproj
+++ b/XDeploy.Deployer/XDeploy.Deployer.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <AssemblyName>xdd</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <ProjectReference Include="..\XDeploy.Core\XDeploy.Core.csproj" />
   </ItemGroup>
 
 </Project>
