Added file versioning system which kind of works

--- a/XDeploy.Server/appsettings.json
+++ b/XDeploy.Server/appsettings.json
@@ -9,5 +9,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CacheLocation": "C:\\Users\\gmihaila\\AppData\\Local\\Temp\\XDeploy_Cache"
 }
