--- a/XDeploy.Deployer/XDeploy.Deployer.csproj
+++ b/XDeploy.Deployer/XDeploy.Deployer.csproj
@@ -7,6 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="config.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="NHttp" Version="0.1.9" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0-preview2.19523.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\XDeploy.Core\XDeploy.Core.csproj" />
   </ItemGroup>
 
