--- a/XDeploy.Core/XDeploy.Core.csproj
+++ b/XDeploy.Core/XDeploy.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta2" />
+    <PackageReference Include="NHttp" Version="0.1.9" />
     <PackageReference Include="WebSocketSharp" Version="1.0.3-rc11" />
   </ItemGroup>
 
