--- a/XDeploy.Deployer/Properties/launchSettings.json
+++ b/XDeploy.Deployer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "XDeploy.Client": {
       "commandName": "Project",
-      "commandLineArgs": "deployer.json"
+      "commandLineArgs": "updater.json"
     }
   }
 }
