--- a/XDeploy.Server/appsettings.json
+++ b/XDeploy.Server/appsettings.json
@@ -10,5 +10,5 @@
     }
   },
   "AllowedHosts": "*",
-  "CacheLocation": "C:\\Users\\gmihaila\\AppData\\Local\\Temp\\XDeploy_Cache"
+  "CacheLocation": "C:\\Users\\georg\\AppData\\Local\\Temp\\XDeploy_Cache"
 }
