Changed caching method for server
-server now uses MongoDb for storing files
-determining file differences is now done using simple lists instead of trees
-replaced deployment jobs with a simple lock-unlock mechanism for each app

--- a/XDeploy.Deployer/XDeploy.Client.csproj
+++ b/XDeploy.Deployer/XDeploy.Client.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0-preview2.19523.17" />
+    <PackageReference Include="websocket-sharp-with-proxy-support" Version="1.9.1" />
   </ItemGroup>
 
   <ItemGroup>
