--- a/XDeploy.Server/XDeploy.Server.csproj
+++ b/XDeploy.Server/XDeploy.Server.csproj
@@ -20,6 +20,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.10.0-beta1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.10.0-beta1" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.10.0-beta1" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.10.0-beta1" />
   </ItemGroup>
 
 
