--- a/XDeploy.Server/appsettings.json
+++ b/XDeploy.Server/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=XDeploy;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=XDeploy;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MongoDbConnection": "mongodb://localhost:27017/XDeploy"
   },
   "Logging": {
     "LogLevel": {
@@ -10,5 +11,6 @@
     }
   },
   "AllowedHosts": "*",
-  "CacheLocation": "C:\\Users\\georg\\AppData\\Local\\Temp\\XDeploy_Cache"
+  "MongoDbFileStorageDbName": "FileStorage",
+  "MaxProjectSizeBytes": 104857600 //100MB
 }
