--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 ##
 ## Get latest from 
 cloc-1.64.exe
+appsettings.json
+appsettings.development.json
 https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # User-specific files
