--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -10,5 +10,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1.5.0
+      with:
+        dotnet-version: 5.0
     - name: Build with dotnet
       run: dotnet build --configuration Release
