--- a/XDeploy.Server/appsettings.json
+++ b/XDeploy.Server/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local)\\SQLEXPRESS;Database=XDeploy;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "MongoDbConnection": "mongodb://localhost:27017/XDeploy"
+    "DefaultConnection": "Data Source=10.2.0.8;Initial Catalog=XDeploy;User ID=sa;Password=SQLSRV00^^",
+    "MongoDbConnection": "mongodb://10.2.0.173:27017/XDeploy"
   },
   "Logging": {
     "LogLevel": {
